<resources>
    <string name="app_name">AndroidLab3</string>
    <string name="smart_travel_survey">Smart-Travel Survey</string>
    <string name="text_input_box">Please enter the code</string>
    <string name="start_button">Start</string>

    <string name="choose_nationality">1. Choose your nationality</string>
    <string name="choose_age_range">2. Choose your age range</string>
    <string name="age_range_1">Under 18</string>
    <string name="age_range_2">18–30</string>
    <string name="age_range_3">31–50</string>
    <string name="age_range_4">51–65</string>
    <string name="age_range_5">Above 65</string>
    <string name="next_button_page_1">NEXT</string>

    <string name="choose_purpose">3. Choose the purpose(s) of your most recent travel:</string>
    <string name="box_1">Business</string>
    <string name="box_2">Relaxation</string>
    <string name="box_3">Medical Reasons</string>
    <string name="box_4">Family Reunification</string>
    <string name="box_5">Others</string>
    <string name="travel_rating">4. How would you rate your most recent travel:</string>
    <string name="next_button_page_2">NEXT</string>

    <string name="summary">Summary</string>
    <string name="submit">SUBMIT</string>
    <string name="thank_you_for_your_participation">Thank you for your participation!</string>
</resources>